--- a/game/.vscode/tasks.json
+++ b/game/.vscode/tasks.json
@@ -14,5 +14,15 @@
                 "isDefault": true
             }
         },
+        {
+            "label": "Test with Busted",
+            "type": "process",
+            "command": "${workspaceFolder}/lua_modules/bin/busted.bat",
+            "args": [],
+            "group": {
+                "kind": "test",
+                "isDefault": true
+            }
+        },
     ]
 }
