chore: Update workspace config to use [LLSA](https://github.com/LuaLS/lua-language-server/discussions/1950)

--- a/game/.luarc.json
+++ b/game/.luarc.json
@@ -7,6 +7,13 @@
         "lldebugger"
     ],
     "workspace.library": [
-        "${3rd}/love2d/library"
-    ]
+        "${addons}/love2d/module/library",
+        "${addons}/busted/module/library",
+        "${addons}/luassert/module/library"
+    ],
+    "runtime.special": {
+        "include": "require",
+        "love.filesystem.load": "loadfile"
+    },
+    "workspace.checkThirdParty": false
 }
