--- a/game/.vscode/settings.json
+++ b/game/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "Lua.runtime.version": "LuaJIT",
-    "editor.inlayHints.enabled": "offUnlessPressed"
+    "editor.inlayHints.enabled": "offUnlessPressed",
+    "busted-test-explorer.testfilepattern": "**/*.test.lua"
 }
