--- a/game/.vscode/settings.json
+++ b/game/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
-    "Lua.runtime.version": "LuaJIT",
-    "editor.inlayHints.enabled": "offUnlessPressed",
-    "busted-test-explorer.testfilepattern": "**/*.test.lua"
+  "Lua.runtime.version": "LuaJIT",
+  "editor.inlayHints.enabled": "on",
+  "editor.formatOnType": false, // required
+  "editor.formatOnPaste": true, // optional
+  "editor.formatOnSave": true, // optional
+  "editor.formatOnSaveMode": "file", // required to format on save
+  "editor.codeActionsOnSave": { "source.fixAll": "explicit" }, // Fix all lint errors on save
+  "vs-code-prettier-eslint.prettierLast": false // set as "true" to run 'prettier' last not first
 }
