--- a/game/.prettierrc
+++ b/game/.prettierrc
@@ -1,9 +1,9 @@
 {
-  "plugins": ["prettier-plugin-organize-imports"],
   "trailingComma": "none",
   "tabWidth": 2,
   "semi": false,
   "singleQuote": true,
   "arrowParens": "avoid",
-  "experimentalTernaries": true
+  "experimentalTernaries": true,
+  "endOfLine": "lf"
 }
