--- a/game/package.json
+++ b/game/package.json
@@ -2,18 +2,18 @@
   "author": "SirWrexes",
   "description": "Breakout game made with LÖVE",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^8.32.1",
-    "@typescript-eslint/parser": "^8.32.1",
+    "@eslint/js": "^9.27.0",
+    "@eslint/json": "^0.12.0",
+    "@eslint/markdown": "^6.4.0",
     "@typescript-to-lua/language-extensions": "^1.19.0",
-    "eslint": "^9.26.0",
+    "eslint": "^9.27.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.0",
     "love-typescript-definitions": "^11.5.0",
     "lua-types": "^2.13.1",
     "prettier": "^3.5.3",
-    "prettier-eslint": "^16.4.2",
-    "prettier-plugin-organize-imports": "^4.1.0",
     "typescript": "^5.8.3",
+    "typescript-eslint": "^8.32.1",
     "typescript-to-lua": "^1.31.0"
   },
   "engines": {
@@ -30,16 +30,17 @@
   "name": "nervous-breakout",
   "packageManager": "pnpm@10.10.0",
   "scripts": {
+    "build": "cd ./lua && makelove --config ../make.toml",
     "clean": "node ./scripts/clean.js",
     "compile": "tstl",
-    "recompile": "pnpm clean && pnpm compile",
-    "build": "cd ./lua && makelove --config ../make.toml",
-    "rebuild": "pnpm recompile && pnpm build",
-    "watch": "tstl --watch",
-    "start": "love ./lua",
-    "restart": "pnpm recompile && love ./lua",
     "dev": "love --console ./lua --dev",
-    "redev": "pnpm recompile && pnpm --dev"
+    "rebuild": "pnpm recompile && pnpm build",
+    "recompile": "pnpm clean && pnpm compile",
+    "redev": "pnpm recompile && pnpm --dev",
+    "restart": "pnpm recompile && love ./lua",
+    "start": "love ./lua",
+    "watch": "tstl --watch"
   },
+  "type": "module",
   "version": "1.0.0"
 }
