chore(VSC): Fix missing or unused imports on save

--- a/game/.vscode/settings.json
+++ b/game/.vscode/settings.json
@@ -11,7 +11,11 @@
     "editor.inlayHints.enabled": "on",
     "editor.tabSize": 2,
     "editor.codeLens": true,
-    "diffEditor.codeLens": false
+    "diffEditor.codeLens": false,
+    "editor.codeActionsOnSave": {
+      "source.addMissingImports": "explicit",
+      "source.removeUnusedImports": "explicit"
+    }
   },
   "[json]": {
     "editor.formatOnType": true, // required
