style: Edit some configs
- Prefer `eslint-plugin-import-x` over `eslint-plugin-import`
- Add TS parser to language options
- Sort rule overrides
- Place rule overrides closer to the plugin they're related to

--- a/game/.prettierrc.json
+++ b/game/.prettierrc.json
@@ -1,4 +1,5 @@
 {
+  "plugins": ["@trivago/prettier-plugin-sort-imports"],
   "trailingComma": "es5",
   "printWidth": 80,
   "tabWidth": 2,
@@ -8,5 +9,7 @@
   "objectWrap": "preserve",
   "endOfLine": "auto",
   "experimentalTernaries": true,
-  "experimentalOperatorPosition": "start"
+  "experimentalOperatorPosition": "start",
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true
 }
