build: Disable implicit self

--- a/game/tsconfig.json
+++ b/game/tsconfig.json
@@ -138,6 +138,7 @@
   },
   "tstl": {
     "luaTarget": "JIT",
-    "sourceMapTraceback": true
+    "sourceMapTraceback": true,
+    "noImplicitSelf": true
   }
 }
