feat(TileMap): Add hover detection and debug print

--- a/game/.prettierrc.json
+++ b/game/.prettierrc.json
@@ -7,7 +7,7 @@
   "singleQuote": true,
   "arrowParens": "avoid",
   "objectWrap": "preserve",
-  "endOfLine": "auto",
+  "endOfLine": "lf",
   "experimentalTernaries": false,
   "experimentalOperatorPosition": "start",
   "importOrderSeparation": true,
