--- a/game/package.json
+++ b/game/package.json
@@ -1,6 +1,13 @@
 {
   "author": "SirWrexes",
   "description": "Breakout game made with LÖVE",
+  "dependencies": {
+    "@typescript-to-lua/language-extensions": "^1.19.0",
+    "love-typescript-definitions": "^11.5.0",
+    "lua-types": "^2.13.1",
+    "type-fest": "^4.41.0",
+    "typescript-to-lua": "^1.31.1"
+  },
   "devDependencies": {
     "@eslint/js": "latest",
     "@eslint/json": "^0.12.0",
@@ -8,19 +15,14 @@
     "@stylistic/eslint-plugin": "^4.2.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@typescript-eslint/parser": "^8.32.1",
-    "@typescript-to-lua/language-extensions": "^1.19.0",
     "eslint": "^9.27.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-import-resolver-typescript": "^4.3.5",
     "eslint-plugin-import-x": "^4.12.2",
     "eslint-plugin-prettier": "^5.4.0",
-    "love-typescript-definitions": "^11.5.0",
-    "lua-types": "^2.13.1",
     "prettier": "^3.5.3",
-    "type-fest": "^4.41.0",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.1",
-    "typescript-to-lua": "^1.31.0"
+    "typescript-eslint": "^8.32.1"
   },
   "engines": {
     "node": ">=22.7.0"
