--- a/game/package.json
+++ b/game/package.json
@@ -12,6 +12,7 @@
     "@eslint/js": "latest",
     "@eslint/json": "^0.12.0",
     "@eslint/markdown": "^6.4.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "@stylistic/eslint-plugin": "^4.2.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@typescript-eslint/parser": "^8.32.1",
@@ -21,6 +22,7 @@
     "eslint-plugin-import-x": "^4.12.2",
     "eslint-plugin-prettier": "^5.4.0",
     "prettier": "^3.5.3",
+    "redux": "^5.0.1",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.32.1"
   },
